@@ -23,6 +23,7 @@ Version 0.1.3 (unreleased)
 * Added open cell count to properties window.
 * Added connectedness to properties window.
 * Added editor to Metadata tab in properties window.
+* Added popup menu for cells in the grid.
 
 Version 0.1.2 (April 2, 2010)
 =============================
